language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_duplicate_annotation.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_duplicate_annotation.move:5:32 ───
   │
 5 │     public fun test() acquires T1, T1 {
   │                                -- Previously listed here
   │                                    ^^ Duplicate acquires item
   │

